deployment/ingress-resource/templates/ingress-exposed-services.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: ingress-exposed-api-service
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: pma-api-service
            port:
              number: 8083
        path: /(.*)
        pathType: ImplementationSpecific
